modal from insert point

--- a/index.html
+++ b/index.html
@@ -74,8 +74,10 @@
                         </tbody>
                     </table>
                 </div>
+                <!-- Add product toggle buuton goes here-->
             </div>
         </div>
+        <!-- Modal form goes here -->
     </div>
 
 
