modal from insert point

--- a/index.html
+++ b/index.html
@@ -74,12 +74,11 @@
                         </tbody>
                     </table>
                 </div>
-                <!-- Add product toggle buuton goes here-->
+                <!-- Add product toggle buton goes here-->
             </div>
         </div>
-        <!-- Modal form goes here -->
     </div>
-
+    <!-- Modal form goes here -->
 
     <script src="./javascript/script.js"></script>
     <!-- Bootstrap 4 Dependencies -->
